--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
     "sass": "^1.75.0"
   },
   "devDependencies": {
